# dj-ai-router

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
ai_router/: __init__.py  admin.py  apps.py  azure_client.py  bedrock_client.py  cached_llm.py  client.py  embeddings.py  encoders.py  local_client.py  logging.py  parsers.py  types.py  vertex_client.py
ai_router/management/commands/: clearllmlog.py
ai_router/migrations/: 0001_initial.py  0002_rename_table_and_indexes.py  0003_add_cache_token_fields.py  0004_remove_llmlog_retry_count.py
ai_router/models/: __init__.py  llm_log.py
ai_router/tests/: test_bedrock_model_config.py  test_cached_llm_bedrock_error_decode.py  test_cached_llm_extended_output_header.py  test_cached_llm_max_tokens.py  test_cached_llm_pdf_bytes.py  test_cached_llm_retries.py  test_cached_llm_stream_resilience.py  test_cached_llm_stream_usage.py  test_cached_llm_streaming_fallback.py  test_imports.py  test_llm_log.py  test_llm_log_fields.py  test_local_client.py  test_retry.py  test_stream_pdf_progress.py
ai_router/utils/: retry.py  safe_markdown.py
