[project]
name = "dj-ai-router"
version = "0.1.0"
description = "Unified multi-provider LLM client factory for Django: Anthropic (Bedrock/Vertex), Azure OpenAI and Google Gemini with prompt caching, streaming, retry handling and per-call DB logging (LLMLog)."
authors = [{ name = "Stefan Ostrowski", email = "ostrowski@addvendo.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "django>=5,<6",
    "pydantic>=2,<3",
    "anthropic[vertex,bedrock]>=0.84,<0.85",
    "google-genai>=1,<2",
    "google-auth>=2,<3",
    "langchain-openai>=1,<2",
    "openai>=2,<3",
    "numpy>=2,<3",
    "bleach>=6,<7",
    "markdown>=3,<4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ai_router"]
